--- a/src/Home.css
+++ b/src/Home.css
@@ -1,8 +1,13 @@
+.home_cube{
+  width: 100%;
+  height: 100vh;
+  background: black;
+}
 .cube {
   position: absolute;
   top: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 .home_mobile{
   width: 100%;
