--- a/src/Ai.css
+++ b/src/Ai.css
@@ -24,9 +24,17 @@
     width: 100%;
     height: 100vh;
 }
+.type_section{
+    width: 100%;
+    padding: 5%;
+    text-align: center;
+}
 .two_type{
     display: flex;
     justify-content: space-around;
+}
+.two_type div{
+    width: 45%;
 }
 .two_type div img{
     border-radius: 20px;
@@ -69,5 +77,11 @@
     }
     .neuralink_section img{
         width: 100%;
+    }
+    .two_type{
+        flex-wrap: wrap;
+    }
+    .two_type div{
+        width: 90%;
     }
 }
