--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ body {
 .login {
   width: 100%;
   height: 100vh;
+  position: fixed;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/public/gallery/Digital_technology.jpg');
   background-size: cover;
 }
@@ -37,7 +38,6 @@ body {
   position: absolute;
   top: 0%;
   right: 5%;
-  height: 100vh;
   width: 25%;
   display: flex;
   align-items: center;
@@ -61,14 +61,28 @@ body {
   color: white !important;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
+
+.logo {
+  text-decoration: none;
+}
+
+.logo h1 {
+  font-size: 5rem;
+  color: white;
+  font-family: 'Koulen', cursive;
+}
 @media (max-width: 1024px) {
   .login-page {
     width: 100%;
     padding: 5%;
   }
 
-  .logo {
-    display: none;
+  .logo h1 {
+    font-size: 2rem;
+  }
+  .logo img{
+    width: 20%;
   }
   .footer{
     flex-wrap: wrap;
@@ -80,20 +94,6 @@ body {
 
 
 
-@import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
-
-.logo {
-  position: absolute;
-  bottom: 5%;
-  left: 5%;
-  text-decoration: none;
-}
-
-.logo h1 {
-  font-size: 100px;
-  color: white;
-  font-family: 'Koulen', cursive;
-}
 
 .loader {
   width: 100%;
