--- a/src/navbar.css
+++ b/src/navbar.css
@@ -43,7 +43,7 @@ nav{
 	position: absolute;
 	top: 5%;
 	right: 5%;
-	opacity: 0;
+	display: none;
 	cursor: pointer;
 }
 
@@ -51,9 +51,9 @@ nav{
 	list-style: none;
 }
 .list a{
-	display: block;
+	/* display: block; */
 	padding: 10px 0;
-	opacity: 0;
+	display: none;
 	color: black;
 	font-size: 2em;
 	text-decoration: none;
@@ -63,7 +63,8 @@ nav{
 	padding: 60px 0px;
 }
 .list .show{
-	opacity: 1;
+	/* opacity: 1; */
+	display: block;
 	transition: 0.2s;
 }
 @import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
